# WildCore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: agent.md  detector.md  index.md  utils.md
src/wildcore/: __init__.py  agent.py  detector.py
tests/: __init__.py  test_detector.py
wildcore/: __init__.py  utils.py
