[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildcore"
version = "0.1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
urls = {"Homepage" = "https://github.com/ochoaughini/WildCore", "Documentation" = "https://github.com/ochoaughini/WildCore/tree/main/docs"}
description = "WildCore - Advanced AI security and anomaly detection framework"
readme = "README.md"
authors = [{ name = "WildCore Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["numpy>=1.20.0"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "black>=24.1.0",
    "isort>=5.10.1",
    "mypy>=1.7.1",
    "ruff>=0.4.2",
]

full = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501", "W291", "W293", "E302", "E128", "E712"]

[tool.ruff]
line-length = 88
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = false
